fix comment - list가 아닌 page로 반환하도록 수정 - 정렬된 상태가 유지되도록 linkedhashmap을 사용하도록 수정